<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/layoutInicioFragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InicioFragment"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layoutBotonesInicioFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/botonGenerarPermiso"
            style="?attr/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:visibility="gone"
            android:text="@string/textoGenerarPermiso"
            android:textSize="18sp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/botonAdministrarTareas"
            style="?attr/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:visibility="gone"
            android:text="@string/textoAdministrarTareas"
            android:textSize="18sp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/botonCrearAusencia"
            style="?attr/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:visibility="gone"
            android:text="@string/textoCrearAusencia"
            android:textSize="18sp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/botonFijarTarea"
            style="?attr/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:visibility="gone"
            android:text="@string/textoFijarTareas"
            android:textSize="18sp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/botonAsignarGuardia"
            style="?attr/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:visibility="gone"
            android:text="@string/textoAsignarGuardias"
            android:textSize="18sp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/botonElaboracionInformes"
            style="?attr/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:visibility="gone"
            android:text="@string/textoElaborarInforme"
            android:textSize="18sp"/>
    </LinearLayout>

</RelativeLayout>