<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/layoutRegistro"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/encabezadoRegistro"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="30dp"
        app:navigationIcon="@drawable/arrow_back"
        app:title="@string/textoRegistro"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputDNIRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:hint="@string/textoDNI"
        app:startIconDrawable="@drawable/badge"
        app:endIconMode="clear_text">

        <EditText
            android:id="@+id/textoInsertarDNIRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputNombreRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:hint="@string/textoNombre"
        app:startIconDrawable="@drawable/person"
        app:endIconMode="clear_text">

        <EditText
            android:id="@+id/textoInsertarNombreRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputCorreoRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:hint="@string/textoCorreo"
        app:startIconDrawable="@drawable/mail"
        app:endIconMode="clear_text">

        <EditText
            android:id="@+id/textoInsertarCorreoRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spinnerTipoProfesorRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputCicloRegistro"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/textoCiclo"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/school">

        <EditText
            android:id="@+id/textoInsertarCicloRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputTitulacionRegistro"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/textoTitulacion"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/license">

        <EditText
            android:id="@+id/textoInsertarTitulacionRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputContrasenaRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:hint="@string/textoContrasena"
        app:startIconDrawable="@drawable/lock"
        app:endIconMode="password_toggle">

        <EditText
            android:id="@+id/textoInsertarContrasenaRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputConfirmarContrasenaRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:hint="@string/textoConfirmarContrasena"
        app:startIconDrawable="@drawable/lock"
        app:endIconMode="password_toggle">

        <EditText
            android:id="@+id/textoInsertarConfirmarContrasenaRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/botonRegistrarse"
        style="?attr/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:text="@string/textoRegistrarse"/>

</LinearLayout>