<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/layoutInicioSesion"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InicioSesionActivity"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/encabezadoInicioSesión"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="60dp"
        app:navigationIcon="@drawable/arrow_back"
        app:title="@string/textoInicioDeSesion"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputCorreoInicioSesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/textoCorreo"
        app:startIconDrawable="@drawable/mail"
        app:endIconMode="clear_text">

        <EditText
            android:id="@+id/textoInsertarCorreoInicioSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputContrasenaInicioSesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:hint="@string/textoContrasena"
        app:startIconDrawable="@drawable/lock"
        app:endIconMode="password_toggle">

        <EditText
            android:id="@+id/textoInsertarContrasenaInicioSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/botonIniciarSesionInicioSesion"
        style="?attr/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:text="@string/textoIniciarSesion" />

</LinearLayout>