<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/layoutMain"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iconoLogoMain"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:src="@drawable/educacion" />

    <TextView
        android:id="@+id/textoEncabezadoMain"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/textoBienvenida"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/botonIniciarSesionMain"
        style="?attr/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/textoIniciarSesion"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/botonRegistrarseMain"
        style="?attr/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/textoRegistrarse"
        android:textSize="20sp"/>

</LinearLayout>