<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/layoutVisualizarReunion"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VisualizarReunionActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/encabezadoVisualizarReunion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/arrow_back"
        app:title="@string/textoReunion"/>

    <TextView
        android:id="@+id/textoProfesorAnfitrionVisualizarReunion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/encabezadoVisualizarReunion"
        android:layout_marginTop="30dp"
        android:text="@string/textoNombre"
        android:textAlignment="center"
        android:textSize="30sp"/>

    <Spinner
        android:id="@+id/spinnerAsistenciaVisualizarReunion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textoProfesorAnfitrionVisualizarReunion"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"/>

    <TextView
        android:id="@+id/textoFechaVisualiarReunion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinnerAsistenciaVisualizarReunion"
        android:layout_marginTop="20dp"
        android:text="@string/textoFechaHoraNumero"
        android:textAlignment="center"
        android:textSize="20sp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/botonRealizadoVisualizarReunion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/check"
        app:maxImageSize="30dp"/>

</RelativeLayout>